--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -174,6 +174,22 @@ jobs:
             python-version: '3.11'
           - os: macos-latest
             python-version: '3.11'
+
+    services:
+      postgres:
+        image: timescale/timescaledb:latest-pg16
+        env:
+          POSTGRES_USER: homepot_user
+          POSTGRES_PASSWORD: homepot_dev_password
+          POSTGRES_DB: homepot_db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - uses: actions/checkout@v4
 
@@ -193,6 +209,8 @@ jobs:
 
     - name: Run unit tests
       shell: bash
+      env:
+        DATABASE__URL: postgresql+asyncpg://homepot_user:homepot_dev_password@localhost:5432/homepot_db
       run: |
         cd backend
         # Run with parallel execution using all available cores
@@ -201,6 +219,8 @@ jobs:
           pytest tests/ -n auto --cov=homepot --cov-report=xml --tb=short --durations=10
         elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
           # Windows-specific configuration: Sequential execution is often faster due to spawn overhead
+          # Explicitly use SQLite to avoid PostgreSQL connection timeouts (Service Containers not supported on Windows)
+          export DATABASE__URL="sqlite+aiosqlite:///./test.db"
           pytest tests/ --tb=short --durations=10 \
             -W ignore::UserWarning:homepot \
             -W ignore:".*Database cleanup.*":UserWarning \
