--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -174,6 +174,7 @@ jobs:
             python-version: '3.11'
           - os: macos-latest
             python-version: '3.11'
+
     steps:
     - uses: actions/checkout@v4
 
@@ -193,21 +194,26 @@ jobs:
 
     - name: Run unit tests
       shell: bash
+      env:
+        # Use SQLite file-based DB for all platforms to avoid Docker dependency
+        # This aligns with the "normal execution" strategy
+        DATABASE__URL: sqlite+aiosqlite:///./test.db
       run: |
         cd backend
-        # Run with parallel execution using all available cores
-        # Only generate coverage on Ubuntu + Python 3.11 to save time
+        # Run sequentially to avoid SQLite locking issues (no -n auto)
+        
         if [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.python-version }}" == "3.11" ]]; then
-          pytest tests/ -n auto --cov=homepot --cov-report=xml --tb=short --durations=10
-        elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-          # Windows-specific configuration: Sequential execution is often faster due to spawn overhead
-          pytest tests/ --tb=short --durations=10 \
+          # Generate coverage only on Ubuntu 3.11
+          pytest tests/ --cov=homepot --cov-report=xml --tb=short --durations=10 \
             -W ignore::UserWarning:homepot \
             -W ignore:".*Database cleanup.*":UserWarning \
             -W ignore:".*Could not cleanup temp database.*":UserWarning
         else
-          # Standard parallel execution for other platforms
-          pytest tests/ -n auto --tb=short --durations=10
+          # Standard execution for other platforms
+          pytest tests/ --tb=short --durations=10 \
+            -W ignore::UserWarning:homepot \
+            -W ignore:".*Database cleanup.*":UserWarning \
+            -W ignore:".*Could not cleanup temp database.*":UserWarning
         fi
 
     - name: Upload coverage reports
