feat(ai): initialize AI infrastructure and update workflows
- Scaffold ai/ directory with FastAPI, Ollama, and ChromaDB integration
- Implement Device Metrics endpoint in backend
- Update CI/CD workflows to include ai/ directory in quality checks
- Update local validation script to match CI/CD
- Fix linting and type checking issues in ai/ code

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,16 +35,16 @@ jobs:
         pip install -e backend/
 
     - name: Run Black formatter check
-      run: black --check backend/src/homepot/ backend/tests/
+      run: black --check backend/src/homepot/ backend/tests/ ai/
 
     - name: Run isort import sorting check
-      run: isort --check-only backend/src/homepot/ backend/tests/
+      run: isort --check-only backend/src/homepot/ backend/tests/ ai/
 
     - name: Run flake8 linting
-      run: flake8 backend/src/homepot/ backend/tests/
+      run: flake8 backend/src/homepot/ backend/tests/ ai/
 
     - name: Run mypy type checking
-      run: mypy --config-file=backend/mypy.ini backend/src/homepot/
+      run: mypy --config-file=backend/mypy.ini backend/src/homepot/ ai/
 
     - name: Validate documentation files
       run: |
