--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -38,6 +38,7 @@ jobs:
     - name: Install project dependencies
       run: |
         python -m pip install --upgrade pip
+        # Installs all dependencies for Backend, AI, and Docs
         pip install -r backend/requirements.txt
         pip install -e backend/
 
@@ -53,6 +54,7 @@ jobs:
         echo "**Repository:** ${{ github.repository }}" >> dependency-report.md
         echo "**Branch:** ${{ github.ref_name }}" >> dependency-report.md
         echo "**Python Version:** ${{ matrix.python-version }}" >> dependency-report.md
+        echo "**Scope:** Backend, AI, Documentation (Unified)" >> dependency-report.md
         echo "" >> dependency-report.md
         
         echo "### Outdated Packages" >> dependency-report.md
