--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -46,6 +46,10 @@ dependencies = [
     "typer>=0.9.0",
     "pyyaml>=6.0.1",
     "python-dotenv>=1.0.0",
+    # AI Dependencies
+    "chromadb>=0.4.0",
+    "ollama>=0.1.0",
+    "textblob>=0.17.1",
     # Database dependencies
     "sqlalchemy>=2.0.0",
     "aiosqlite>=0.19.0",
