chore: remove python 3.9/3.10 support and update documentation
- Update MyPy configuration to target Python 3.11
- Update install.sh to require Python 3.11+
- Update README.md and documentation to reflect 3.11+ requirement
- Update workflow documentation and scripts
- Drop Python 3.9/3.10 from CI matrix due to Starlette 0.50.0 and Sphinx 8.2.3 requirements

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -237,7 +237,7 @@ jobs:
         echo "" >> dependency-report.md
         echo "### Python Version Compatibility" >> dependency-report.md
         echo "**Current Python:** $(python --version)" >> dependency-report.md
-        echo "**Supported versions:** 3.9, 3.10, 3.11, 3.12 (as per backend/pyproject.toml)" >> dependency-report.md
+        echo "**Supported versions:** 3.11, 3.12 (as per backend/pyproject.toml)" >> dependency-report.md
         echo "**Testing on:** ${{ matrix.python-version }}" >> dependency-report.md
         echo "Python $(python -c 'import sys; print(f"{sys.version_info.major}.{sys.version_info.minor}")') compatibility verified" >> dependency-report.md
 
