feat: Implement device management with commands and real agent support
- Added DeviceCommandsEndpoint for queuing and retrieving commands
- Implemented real_device_agent.py for physical device monitoring
- Added comprehensive tests for device command flow
- Updated documentation for real device transition
- Cleaned up redundant database reset scripts
- Fixed type hints and mypy errors in database and auth modules

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -96,3 +96,4 @@ types-passlib==1.7.7.20250602  # Type stubs for passlib
 types-requests==2.32.4.20250913  # Type stubs for requests
 types-psutil==7.0.0.20251001  # Type stubs for psutil
 types-PyYAML==6.0.12.20250915  # Type stubs for PyYAML
+psutil==5.9.8
