feat: Implement device configuration history, delete functionality, and UI polish
- Added Configuration History and Delete functionality to Device Settings
- Implemented dynamic parameter logging in agents.py
- Created shared Toast component
- Polished UI: Custom modals, navigation updates, dashboard cleanup
- Updated documentation for MDM and Push Notifications
- Updated seed data and init scripts for new tables

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,6 +108,7 @@ nav:
   
   - User Guides:
       - Device Registration: device-registration.md
+      - MDM Configuration: device-configuration-mdm.md
       - POS Management: pos-management.md
       - Real-time Dashboard: real-time-dashboard.md
       - Agent Simulation: agent-simulation.md
@@ -135,6 +136,7 @@ nav:
   
   - Push Notifications:
       - Overview: push-notification.md
+      - Payload Structure: push-notification-payloads.md
       - Analytics Roadmap: push-analytics-roadmap.md
       - FCM (Linux/Android): fcm-linux-integration.md
       - WNS (Windows): wns-windows-integration.md
