feat(ai): implement self-aware system knowledge and dual-memory architecture
- Added System Knowledge to scan codebase structure
- Implemented Short-Term Memory (Conversation History)
- Implemented Long-Term Memory (ChromaDB) with inspection tools
- Updated AI Endpoint to inject memory stats and system context
- Added ChromaDB inspection scripts (query-chroma.sh, inspect_chroma.py)
- Updated documentation for AI architecture and memory inspection

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -160,6 +160,7 @@ nav:
       - Full Roadmap: ai-roadmap.md
       - Infrastructure Implementation: ai-infrastructure.md
       - Implementation Details: ai-implementation.md
+      - Memory Inspection: ai-memory-inspection.md
       - Context Builder: ai-context-builder.md
       - Data Collection: analytics-data-collection.md
       - Data Collection Guide: data-collection-guide.md
