feat(auth): enhance registration with full name and fix role assignments
- Added 'full_name' column to Users table
- Updated Signup backend endpoint to handle full_name and auto-generate username
- Updated User schemas and models
- Updated Seed Data to include standard names
- Updated Signup.jsx to capture Full Name
- Updated helper scripts (query-db.sh) for better visibility

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ nav:
       - Integration Guide: integration-guide.md
   
   - User Guides:
+      - Authentication Guide: authentication-guide.md
       - Device Registration: device-registration.md
       - MDM Configuration: device-configuration-mdm.md
       - POS Management: pos-management.md
