--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,10 +11,14 @@ asyncpg==0.31.0  # PostgreSQL async driver (production)
 alembic==1.17.2  # Database migration tool for SQLAlchemy
 psycopg2-binary==2.9.11  # PostgreSQL sync driver (backup/utility scripts)
 
-# Authentication and Security
+# Authentication and Security (including SSO/Google Auth)
 passlib[bcrypt]==1.7.4  # Password hashing library
 bcrypt==4.1.3  # Modern password hashing (Upgraded for chromadb compatibility)
 python-multipart==0.0.21  # Streaming multipart parser for file uploads
+google-auth==2.45.0  # Required for Google ID token verification
+google-auth-oauthlib==1.2.2  # For OAuth2 flows
+requests==2.32.5  # Required for token exchange requests
+pyjwt[crypto]==2.10.1  # For JWT token generation
 
 # Background Tasks and Queues
 celery==5.6.0  # Distributed task queue for background processing
@@ -42,8 +46,6 @@ textblob==0.19.0  # Simple NLP library for sentiment analysis/processing
 
 # Push Notifications
 aiohttp==3.13.2  # For async HTTP requests in push notification providers
-google-auth==2.45.0  # For Google Cloud/Firebase authentication (FCM Linux)
-google-auth-oauthlib==1.2.2  # For OAuth2 flows (FCM Linux)
 pyjwt[crypto]==2.10.1  # For JWT token generation (APNs authentication)
 py-vapid==1.9.2  # Pinning to 1.9.2 because 1.9.3 is broken (contains absolute symlinks)
 pywebpush==2.1.1  # For Web Push notifications (browsers)
@@ -90,11 +92,11 @@ ipython==9.6.0  # Interactive computing
 jupyter==1.1.1  # Jupyter metapackage
 httpx[http2]==0.28.1  # Next-generation HTTP client (for testing HTTP clients and APNs HTTP/2 support)
 
-requests==2.32.5  # Simple, yet elegant HTTP library
 pydantic[email]==2.12.5  # Pydantic with email validation support
 
 # Type stubs for mypy
 types-passlib==1.7.7.20250602  # Type stubs for passlib
 types-requests==2.32.4.20250913  # Type stubs for requests
+types-google-auth==2.0.0.20240430  # Type stubs for google-auth
 types-psutil==7.0.0.20251001  # Type stubs for psutil
 types-PyYAML==6.0.12.20250915  # Type stubs for PyYAML
