--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -155,6 +155,13 @@ plugins = ["sqlalchemy.ext.mypy.plugin"]
 module = "tests.*"
 disallow_untyped_defs = false
 
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["homepot"]
+src_paths = ["src"]
+force_sort_within_sections = true
+
 # Pytest configuration
 [tool.pytest.ini_options]
 minversion = "7.0"
