--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -24,6 +24,9 @@ on:
 permissions:
   contents: read
 
+env:
+  SECRET_KEY: ci_test_secret_key
+
 jobs:
   security-audit:
     name: Security Vulnerability Audit
