(bug/gooole-login-issue)
fix docker issue

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -60,6 +60,11 @@ dependencies = [
     "redis>=5.0.0",
     # Real-time communication
     "websockets>=12.0",
+    # Authentication & SSO
+    "google-auth>=2.23.0",
+    "google-auth-oauthlib>=1.1.0",
+    "requests>=2.31.0",
+    "slowapi>=0.1.9",
     # Testing runtime dependency for factories
     "greenlet>=2.0.0",
 ]
