--- a/ai/config.yaml
+++ b/ai/config.yaml
@@ -24,7 +24,10 @@ anomaly_detection:
   sensitivity: 0.8
   window_size: 50
   thresholds:
-    max_latency_ms: 500
-    max_error_rate: 0.05
+    network_latency_ms: 200
+    cpu_percent: 90.0
+    memory_percent: 90.0
+    disk_percent: 90.0
+    error_rate: 0.05
     max_flapping_count: 5  # State changes per hour
     consecutive_failures: 3
